--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -74,7 +74,7 @@ A panel that displays a list of FileThis documents
                         label="Grid"
                         hidden$="[[!showGridButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onViewAsGridButtonClicked">
+                        on-tap="_onViewAsGridButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- List button -->
@@ -84,7 +84,7 @@ A panel that displays a list of FileThis documents
                         label="List"
                         hidden$="[[!showListButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onViewAsListButtonClicked">
+                        on-tap="_onViewAsListButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- Preview button -->
@@ -95,7 +95,7 @@ A panel that displays a list of FileThis documents
                         disabled="[[!_haveSelection]]"
                         hidden$="[[!showPreviewButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onPreviewButtonClicked">
+                        on-tap="_onPreviewButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- View button group spacer -->
@@ -108,7 +108,7 @@ A panel that displays a list of FileThis documents
                         label="Upload"
                         hidden$="[[!showUploadButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onUploadButtonClicked">
+                        on-tap="_onUploadButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- Download button -->
@@ -119,7 +119,7 @@ A panel that displays a list of FileThis documents
                         disabled="[[!_haveSelection]]"
                         hidden$="[[!showDownloadButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onDownloadButtonClicked">
+                        on-tap="_onDownloadButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- Upload/download button group spacer -->
@@ -133,7 +133,7 @@ A panel that displays a list of FileThis documents
                         disabled="[[!_haveSelection]]"
                         hidden$="[[!showDeleteButton]]"
                         style$="margin-right:5px;"
-                        on-click="_onDeleteButtonClicked">
+                        on-tap="_onDeleteButtonClicked">
                 </ft-labeled-icon-button>
 
                 <!-- Upload/download button group spacer -->
@@ -156,7 +156,7 @@ A panel that displays a list of FileThis documents
                         <!--icon="info-outline"-->
                         <!--label="Details"-->
                         <!--disabled="[[!_haveSelection]]"-->
-                        <!--on-click="_onShowDetailsButtonClicked">-->
+                        <!--on-tap="_onShowDetailsButtonClicked">-->
                 <!--</ft-labeled-icon-button>-->
             </div>
 
