--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -219,7 +219,7 @@ A panel that displays a list of FileThis documents
 
             behaviors: [
                 Polymer.IronResizableBehavior,
-                FtScrollingBehavior
+                FileThis.ScrollingBehavior
             ],
 
             /**
