--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -45,7 +45,7 @@ limitations under the License.
 
 A panel that displays a list of FileThis documents
 
-@demo demo/index.html
+@demo
  -->
 <dom-module id="demo-fixture">
 
