--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -56,6 +56,17 @@ A panel that displays a list of FileThis documents
         <style>
             :host {
                 display:block;
+
+                --ft-document-panel-button:
+                {
+                    background-color: blue;
+                };
+
+                --ft-labeled-icon-button:
+                {
+                    background-color: yellow;
+                };
+
             }
         </style>
 
