--- a/ft-document-panel.html
+++ b/ft-document-panel.html
@@ -25,7 +25,7 @@ limitations under the License.
 <link rel="import" href="../iron-pages/iron-pages.html">
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../polymer/polymer.html">
-
+<link rel="import" href="../shadycss/apply-shim.html">
 
 <!--
 `<ft-document-panel>`
