--- a/demo/demo-fixture.html
+++ b/demo/demo-fixture.html
@@ -35,6 +35,7 @@ limitations under the License.
 <!-- ft-document-panel element demo -->
 
 <!-- Imports -->
+<link rel="import" href="../../ft-element-demo/ft-element-demo.html">
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../ft-document-panel.html">
